# maya_heightmap_to_raw

./: CMakeLists.txt  README.md  copy_to_plugin_folder.bat  create_package.bat  generate.bat  main.cpp
gui/: HeightMapToRaw.py  HeightMapToRaw.ui
licenses/: HeightMapToRaw
maya2018project/: HeightMapToRaw.sln
maya2018project/HeightMapToRaw/: HeightMapToRaw.vcxproj  HeightMapToRaw.vcxproj.filters  Options.txt  ReadMe.txt
